# FastMDSimulation

./: .coveragerc  .readthedocs.yaml  README.md  environment.yml  pyproject.toml  pytest.ini  tree.txt
.github/workflows/: tests.yml
docs/: conf.py  guide.md  index.md  quickstart.md
docs/_static/: custom.css
docs/_templates/: layout.html
docs/_templates/sidebar/: brand.html
docs/api/: api.md  cli.md  core.md  engines.md  index.md  utils.md
examples/: job_full.yml  protein_ligand.yml
examples/trpcage/: config_trpcage.yml
examples/waterbox/: job_water2nm.yml  water2nm.yml
recipe/: meta.yaml
recipes/fastmdsimulation/: meta.yaml
scripts/: run_code_quality.sh
src/fastmdsimulation/: __init__.py  api.py  cli.py
src/fastmdsimulation/core/: ligand.py  orchestrator.py  pdbfix.py  simulate.py
src/fastmdsimulation/engines/: openmm_engine.py  plumed_support.py
src/fastmdsimulation/reporting/: analysis_bridge.py
tests/: conftest.py  test_cli.py  test_core.py
tests/api/: test_analysis.py  test_edge_cases.py  test_init.py  test_integration.py  test_simulate_pdb.py  test_simulate_yaml.py
tests/cli/: test_helpers.py  test_integration.py  test_main.py  test_pdb_plan_resolution.py
tests/engines/: test_openmm_comprehensive.py  test_openmm_edge_cases.py  test_openmm_helpers.py  test_openmm_integration.py  test_openmm_integrators.py  test_openmm_stages.py  test_openmm_system_building.py  test_plumed_support.py
tests/reporting/: test_command_building.py  test_file_detection.py  test_main_analysis.py  test_multiple_runs.py  test_process_execution.py
(+10 files in other folders)
