[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmdsimulation"
version = "0.1.0"
description = "Automated Molecular Dynamics Simulation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Adekunle Aina", email = "aaina@csudh.edu"}]
maintainers = [{ name = "AAI Research Lab" }]
dependencies = [
    "PyYAML>=6.0.1",
    "rich>=13.7.0"
    # Note: OpenMM, MDTraj, etc. are installed via conda/mamba
    # fastmdanalysis moved to optional dependencies below
]

[project.optional-dependencies]
tests = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.12"
]
analysis = [
    "fastmdanalysis>=1.0.0"
]

[project.scripts]
fastmds = "fastmdsimulation.cli:main"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["fastmdsimulation*"]
